themes/idgaf/assets/css/main.css
@media (min-width: 480px) {
  body {
    width: 480px;
  }
}

body {
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  margin: 0 auto;
  padding: 0 0.5rem;
}

main {
  flex-grow: 1;
}

h1.siteTitle {
  margin: 0;
  margin-top: 1rem;
  font-family: "Times New Roman", serif;
  font-style: italic;
}

a:has(img),
.Tags a {
  box-shadow: none;
}

a:has(img):hover {
  text-decoration: none;
}

a {
  color: black;
  text-decoration: none;
  box-shadow: inset 0 -3px #dac1f4;
  position: relative;
}

a:hover {
  text-decoration: underline;
  text-decoration-thickness: 1.5px;
  text-decoration-style: dotted;
  text-underline-offset: 0.1rem;
}

#MAIN_NAV {
  padding-bottom: 0.25rem;
  border-bottom: 2px solid black;
}

hr {
  margin: 1rem 0;
  border: none;
  border-top: 2px dotted lightgray;
}

ul,
ol {
  padding-left: 2rem;
}

#MAIN_NAV ul {
  margin: 0;
  padding: 0;
  display: flex;
  gap: 1rem;
  font-style: italic;
}

#MAIN_NAV ul>li {
  padding: 0.5rem 0rem;
  list-style-type: none;
}

img {
  max-width: 100%;
  height: auto;
}

.listItem {
  margin: 1rem 0;
}

.listItem>h2 {
  margin: 0;
}

.listSummary {
  max-height: 100px;
  overflow: hidden;
  position: relative;
}

.listSummary:after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  pointer-events: none;
  background: linear-gradient(transparent, white);
  width: 100%;
  height: 50%;
}

div.highlight>pre {
  padding: 1rem;
  border: 1px solid black;
  border-radius: 0.5rem;
  background-color: #f0f0f0;
  overflow: scroll;
}

blockquote>*:first-child {
  margin-top: 0;
}

blockquote>*:last-child {
  margin-bottom: 0;
}

blockquote {
  margin: 1rem 0;
  padding: 0.75rem 1rem;
  background: #997ead11;
  border-left: 2px solid #997ead;
}

p code,
table code,
li>code {
  background: #997ead1d;
  padding: 4px 6px;
  font-size: 0.8rem;
}

.Tags {
  display: flex;
  flex-direction: row;
  gap: 0.5rem;
  flex-wrap: wrap;
  margin: 0.5rem 0;
}

.Tags>ul {
  padding: 0;
  margin: 0;
}

.Tags>ul>li {
  display: inline;
  padding: 0.1rem 0.5rem;
  border: 2px solid #dac1f4;
  border-radius: 2rem;
  font-family: monospace;
  font-size: 0.9rem;
}

.header-tag {
  box-shadow: none;
  color: #dac1f4;
}

/* Dark mode */
@media (prefers-color-scheme: dark) {
  body {
    background-color: #222;
    color: #ddd;
  }

  a {
    color: #ddd;
    box-shadow: inset 0 -3px #866da3;
  }

  #MAIN_NAV {
    border-bottom-color: #ddd;
  }

  hr {
    border-top-color: #444;
  }

  #MAIN_NAV ul>li {
    color: #b4aee8;
  }

  div.highlight>pre {
    background-color: #444;
  }

  blockquote {
    background: #b4aee811;
    border-left-color: #b4aee8;
  }

  .listSummary:after {
    background: linear-gradient(transparent, #222);
  }

  .Tags>ul>li {
    border-color: #866da3;
  }

  .header-tag {
    color: #866da3;
  }
}

